--- a/scss/sections/portfolio/_green-box.scss
+++ b/scss/sections/portfolio/_green-box.scss
@@ -7,7 +7,7 @@
   height: 30rem;
   justify-content: center;
   padding: 1.5rem;
-  transition: box-shadow 0.3s ease-in-out, transform 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
   width: 28rem;
 
   &:first-child {
@@ -28,11 +28,9 @@
   }
 
   &__example-img {
-    filter: grayscale(70%);
     max-height: 10rem;
     max-width: 24rem;
     width: auto;
-    transition: filter 0.3s ease-in-out;
   }
 
   &__title {
@@ -49,11 +47,12 @@
   }
 
   &:hover {
-    box-shadow: 0 0 2rem 0 rgba(65, 255, 20, 1), inset 0 0 2rem 0 rgba(65, 255, 20, 1);
+    box-shadow: 0 0 2rem 0 rgba(65, 255, 20, 1);
     transform: perspective(500px) rotateX(20deg);
+    background-color: #222;
   }
 
-  &:hover &__example-img {
-    filter: grayscale(0%);
+  &:hover .container-aboutme-portfolio {
+    background-color: #222;
   }
 }
