--- a/scss/sections/start-page/_header.scss
+++ b/scss/sections/start-page/_header.scss
@@ -9,6 +9,10 @@
 	&__my-photo {
 		@include myphoto(10rem);
 		margin: 0 auto;
+
+		@include mq(576px) {
+			@include myphoto(12rem);
+		}
 	}
 
 	&__my-name {
@@ -18,6 +22,11 @@
 		margin: 1rem auto;
 		text-align: center;
 		width: 21rem;
+		
+		@include mq(576px) {
+			font-size: 7rem;
+			width: 37rem;
+		}
 
 		&--green {
 			color: var(--secondary-clr);
@@ -32,11 +41,21 @@
 		padding: 0.5rem 0;
 		width: 28rem;
 
+		@include mq(576px) {
+			padding: 2rem 0;
+			width: 100%;
+		}
+
 		&__profession {
 			font-size: 1.8rem;
 			font-weight: normal;
 			line-height: 3rem;
 			margin: 0;
+
+			@include mq(576px) {
+				font-size: 2.4rem;
+				margin-bottom: 2rem;
+			}
 
 			&--green {
 				color: var(--secondary-clr);
@@ -44,6 +63,10 @@
 				font-weight: normal;
 				line-height: 3rem;
 				margin: 0;
+
+				@include mq(576px) {
+					font-size: 2.4rem;
+				}
 			}
 		}
 	}
@@ -60,6 +83,10 @@
 			font-size: 3rem;
 			margin-right: 1.5rem;
 			transition: color 0.3s ease-in-out;
+
+			@include mq(576px) {
+				margin-right: 4.3rem;
+			}
 
 			&:hover {
 				color: var(--secondary-clr);
