--- a/scss/sections/aboutme/_header.scss
+++ b/scss/sections/aboutme/_header.scss
@@ -13,17 +13,30 @@
 		font-weight: bold;
 		margin: 0;
 		text-transform: uppercase;
+
+		@include mq(576px) {
+			font-size: 7rem;
+		}
 	}
 
 	&__subtitle {
 		font-size: 1.8rem;
 		font-weight: normal;
 		margin: 1rem 0 0 0;
+
+		@include mq(576px) {
+			font-size: 2.4rem;
+		}
 	}
 
 	&__my-photo {
 		@include myphoto(10rem);
 		margin: 2.5rem auto;
+
+		@include mq(576px) {
+			@include myphoto(12rem);
+			margin: 4rem auto;
+		}
 	}
 
 	&__description {
@@ -32,6 +45,12 @@
 		margin: 0;
 		text-align: center;
 		width: 24rem;
+
+		@include mq(576px) {
+			font-size: 2.6rem;
+			line-height: 3.8rem;
+			width: 40rem;
+		}
 	}
 }
 
@@ -56,6 +75,12 @@
 		left: 50%;
 		position: absolute;
 		transform: translateX(-50%);
+
+		@include mq(576px) {
+			border-top: 5rem solid var(--secondary-clr);
+			border-left: 5rem solid transparent;
+			border-right: 5rem solid transparent;
+		}
 	}
 
 	&__arrow:nth-child(2) {
@@ -70,6 +95,12 @@
 		left: 50%;
 		position: absolute;
 		transform: translateX(-50%);
+
+		@include mq(576px) {
+			border-top: 4rem solid var(--secondary-clr);
+			border-left: 4rem solid transparent;
+			border-right: 4rem solid transparent;
+		}
 	}
 
 	&__arrow:nth-child(3) {
@@ -84,6 +115,12 @@
 		left: 50%;
 		position: absolute;
 		transform: translateX(-50%);
+
+		@include mq(576px) {
+			border-top: 3rem solid var(--secondary-clr);
+			border-left: 3rem solid transparent;
+			border-right: 3rem solid transparent;
+		}
 	}
 }
 
@@ -98,6 +135,10 @@
 		}
 
 		&__arrow:nth-child(1) {
+			animation-name: arrowMove;
+			animation-duration: 1s;
+			animation-iteration-count: infinite;
+			animation-direction: alternate-reverse;
 			background-color: var(--secondary-clr);
 			bottom: 2rem;
 			clip-path: polygon(0 0, 100% 0, 50% 100%);
@@ -106,9 +147,18 @@
 			position: absolute;
 			transform: translateX(-50%);
 			width: 5rem;
+			
+			@include mq(576px) {
+				height: 5rem;
+				width: 10rem;
+			}
 		}
 
 		&__arrow:nth-child(2) {
+			animation-name: arrowMove;
+			animation-duration: 1s;
+			animation-iteration-count: infinite;
+			animation-direction: alternate-reverse;
 			background-color: var(--secondary-clr);
 			bottom: 1.5rem;
 			clip-path: polygon(0 0, 100% 0, 50% 100%);
@@ -117,9 +167,18 @@
 			position: absolute;
 			transform: translateX(-50%);
 			width: 4rem;
+
+			@include mq(576px) {
+				height: 4rem;
+				width: 8rem;
+			}
 		}
 
 		&__arrow:nth-child(3) {
+			animation-name: arrowMove;
+			animation-duration: 1s;
+			animation-iteration-count: infinite;
+			animation-direction: alternate-reverse;
 			background-color: var(--secondary-clr);
 			bottom: 1rem;
 			clip-path: polygon(0 0, 100% 0, 50% 100%);
@@ -128,6 +187,11 @@
 			position: absolute;
 			transform: translateX(-50%);
 			width: 3rem;
+
+			@include mq(576px) {
+				height: 3rem;
+				width: 6rem;
+			}
 		}
 	}
 }
