--- a/scss/sections/aboutme/_courses.scss
+++ b/scss/sections/aboutme/_courses.scss
@@ -1,4 +1,14 @@
 .courses {
 	width: 100%;
 	margin-bottom: 3rem;
+
+	@include mq(576px) {
+		width: 40rem;
+	}
+
+	.gray-box {
+		@include mq(576px) {
+			padding: 2rem 3.5rem;
+		}
+	}
 }
