--- a/css/main.css
+++ b/css/main.css
@@ -327,6 +327,7 @@ body {
   color: var(--primary-clr);
   font-family: var(--font);
   margin: 0;
+  overflow-x: hidden;
   padding: 0; }
 
 .container {
@@ -903,12 +904,19 @@ body {
     font-weight: bold;
     margin: 0;
     text-transform: uppercase; }
+    @media screen and (min-width: 576px) {
+      .header-portfolio__title {
+        font-size: 7rem; } }
   .header-portfolio__subtitle {
     font-size: 1.8rem;
     font-weight: normal;
     line-height: 1.5;
     margin: 1rem 0 0 0;
     text-align: center; }
+    @media screen and (min-width: 576px) {
+      .header-portfolio__subtitle {
+        font-size: 2.4rem;
+        width: 34rem; } }
 
 .green-box {
   align-items: center;
@@ -919,35 +927,58 @@ body {
   height: 30rem;
   justify-content: center;
   padding: 1.5rem;
-  transition: all 0.3s ease-in-out;
+  transition: box-shadow 0.3s ease-in-out, background-color 0.3s ease-in-out;
   width: 28rem; }
+  @media screen and (min-width: 576px) {
+    .green-box {
+      height: 45.6rem;
+      padding: 2rem;
+      width: 45.6rem; } }
   .green-box:first-child {
     margin-top: 1rem; }
+    @media screen and (min-width: 576px) {
+      .green-box:first-child {
+        margin-top: 3rem; } }
   .green-box:not(:last-child) {
     margin-bottom: 3rem; }
+    @media screen and (min-width: 576px) {
+      .green-box:not(:last-child) {
+        margin-bottom: 5rem; } }
   .green-box__link {
     align-items: center;
     color: var(--primary-clr);
     display: flex;
     flex-direction: column;
+    height: 100%;
     justify-content: center;
     text-decoration: none; }
   .green-box__example-img {
     max-height: 10rem;
     max-width: 24rem;
     width: auto; }
+    @media screen and (min-width: 576px) {
+      .green-box__example-img {
+        max-height: 17rem;
+        max-width: 40rem; } }
   .green-box__title {
     color: var(--secondary-clr);
     font-size: 2rem;
     margin: 1rem 0; }
+    @media screen and (min-width: 576px) {
+      .green-box__title {
+        font-size: 3.2rem;
+        margin: 2rem 0 1.5rem; } }
   .green-box__text {
     font-size: 1.6rem;
     line-height: 2rem;
     margin: 0;
     text-align: center; }
+    @media screen and (min-width: 576px) {
+      .green-box__text {
+        font-size: 2.4rem;
+        line-height: 3rem; } }
   .green-box:hover {
     box-shadow: 0 0 2rem 0 #41ff14;
-    transform: perspective(500px) rotateX(20deg);
     background-color: #222; }
   .green-box:hover .container-aboutme-portfolio {
     background-color: #222; }
