--- a/scss/sections/portfolio/_green-box.scss
+++ b/scss/sections/portfolio/_green-box.scss
@@ -7,15 +7,29 @@
   height: 30rem;
   justify-content: center;
   padding: 1.5rem;
-  transition: all 0.3s ease-in-out;
+  transition: box-shadow 0.3s ease-in-out, background-color 0.3s ease-in-out;
   width: 28rem;
+
+  @include mq(576px) {
+    height: 45.6rem;
+    padding: 2rem;
+    width: 45.6rem;
+  }
 
   &:first-child {
     margin-top: 1rem;
+
+    @include mq(576px) {
+      margin-top: 3rem;
+    }
   }
 
   &:not(:last-child) {
     margin-bottom: 3rem;
+
+    @include mq(576px) {
+      margin-bottom: 5rem;
+    }
   }
 
   &__link {
@@ -23,6 +37,7 @@
     color: var(--primary-clr);
     display: flex;
     flex-direction: column;
+    height: 100%;
     justify-content: center;
     text-decoration: none;
   }
@@ -31,12 +46,22 @@
     max-height: 10rem;
     max-width: 24rem;
     width: auto;
+
+    @include mq(576px) {
+      max-height: 17rem;
+      max-width: 40rem;
+    }
   }
 
   &__title {
     color: var(--secondary-clr);
     font-size: 2rem;
     margin: 1rem 0;
+
+    @include mq(576px) {
+      font-size: 3.2rem;
+      margin: 2rem 0 1.5rem;
+    }
   }
 
   &__text {
@@ -44,11 +69,15 @@
     line-height: 2rem;
     margin: 0;
     text-align: center;
+
+    @include mq(576px) {
+      font-size: 2.4rem;
+      line-height: 3rem;
+    }
   }
 
   &:hover {
     box-shadow: 0 0 2rem 0 rgba(65, 255, 20, 1);
-    transform: perspective(500px) rotateX(20deg);
     background-color: #222;
   }
 
