--- a/scss/sections/portfolio/_header.scss
+++ b/scss/sections/portfolio/_header.scss
@@ -13,6 +13,10 @@
       font-weight: bold;
       margin: 0;
       text-transform: uppercase;
+
+      @include mq(576px) {
+        font-size: 7rem;
+      }
     }
 
     &__subtitle {
@@ -21,5 +25,10 @@
       line-height: 1.5;
       margin: 1rem 0 0 0;
       text-align: center;
+
+      @include mq(576px) {
+        font-size: 2.4rem;
+        width: 34rem;
+      }
     }
 }
