Add responsive styles for 576px (contact)

--- a/css/main.css
+++ b/css/main.css
@@ -867,6 +867,9 @@ body {
       width: 40rem; } }
   .skills .description--green {
     margin-bottom: 1.5rem; }
+    @media screen and (min-width: 576px) {
+      .skills .description--green {
+        margin-bottom: 2rem; } }
 
 .courses {
   width: 100%;
@@ -999,15 +1002,29 @@ body {
     color: var(--secondary-clr);
     font-size: 4rem;
     text-transform: uppercase; }
+    @media screen and (min-width: 576px) {
+      .header-contact__title {
+        font-size: 7rem;
+        margin: 4rem 0; } }
   .header-contact .fa-envelope {
     font-size: 4rem; }
+    @media screen and (min-width: 576px) {
+      .header-contact .fa-envelope {
+        font-size: 6rem;
+        margin-bottom: 2rem; } }
   .header-contact__email {
     font-size: 1.8rem;
     margin-bottom: 0.5rem; }
+    @media screen and (min-width: 576px) {
+      .header-contact__email {
+        font-size: 2.2rem; } }
   .header-contact .header-icons {
     display: flex;
     justify-content: space-between;
     margin-top: 2rem; }
+    @media screen and (min-width: 576px) {
+      .header-contact .header-icons {
+        margin-top: 4rem; } }
     .header-contact .header-icons .header-icons__facebook,
     .header-contact .header-icons .header-icons__github,
     .header-contact .header-icons .header-icons__linkedin {
@@ -1015,6 +1032,12 @@ body {
       font-size: 4rem;
       margin-right: 6rem;
       transition: color 0.3s ease-in-out; }
+      @media screen and (min-width: 576px) {
+        .header-contact .header-icons .header-icons__facebook,
+        .header-contact .header-icons .header-icons__github,
+        .header-contact .header-icons .header-icons__linkedin {
+          font-size: 6rem;
+          margin-right: 10rem; } }
       .header-contact .header-icons .header-icons__facebook:hover,
       .header-contact .header-icons .header-icons__github:hover,
       .header-contact .header-icons .header-icons__linkedin:hover {
