--- a/css/main.css
+++ b/css/main.css
@@ -501,6 +501,13 @@ body {
   top: 2rem;
   width: 3rem;
   z-index: 1; }
+  @media screen and (min-width: 768px) {
+    .hamburger-menu {
+      height: 5rem;
+      position: absolute;
+      right: 5rem;
+      top: 5rem;
+      width: 6rem; } }
   .hamburger-menu.close-btn .hamburger-menu__bar {
     transform: rotate(-315deg); }
   .hamburger-menu.close-btn .hamburger-menu__bar::before {
@@ -513,10 +520,15 @@ body {
     border-radius: 0.5rem;
     height: 0.5rem;
     width: 100%;
-    height: 0.5rem;
     position: absolute;
     top: 1rem;
     transition: transform 0.3s ease-in-out; }
+    @media screen and (min-width: 768px) {
+      .hamburger-menu__bar {
+        background-color: var(--primary-clr);
+        border-radius: 0.5rem;
+        height: 1rem;
+        width: 100%; } }
     .hamburger-menu__bar::before, .hamburger-menu__bar::after {
       background-color: var(--primary-clr);
       border-radius: 0.5rem;
@@ -524,10 +536,22 @@ body {
       width: 100%;
       content: '';
       position: absolute; }
+      @media screen and (min-width: 768px) {
+        .hamburger-menu__bar::before, .hamburger-menu__bar::after {
+          background-color: var(--primary-clr);
+          border-radius: 0.5rem;
+          height: 1rem;
+          width: 100%; } }
     .hamburger-menu__bar::before {
       top: -1rem; }
+      @media screen and (min-width: 768px) {
+        .hamburger-menu__bar::before {
+          top: -2rem; } }
     .hamburger-menu__bar::after {
       top: 1rem; }
+      @media screen and (min-width: 768px) {
+        .hamburger-menu__bar::after {
+          top: 2rem; } }
 
 .menu {
   height: 100%;
