--- a/css/main.css
+++ b/css/main.css
@@ -563,15 +563,29 @@ body {
   transition: all 0.3s ease-in-out;
   visibility: hidden;
   width: 100%; }
+  @media screen and (min-width: 768px) {
+    .menu {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr); } }
   .menu__header {
     align-items: center;
     display: flex;
     height: 50vh; }
+    @media screen and (min-width: 768px) {
+      .menu__header {
+        height: 100vh; } }
     .menu__header .header__my-name {
       transform: translateY(-300%);
       transition: transform 0.3s ease-in-out; }
+      @media screen and (min-width: 768px) {
+        .menu__header .header__my-name {
+          transform: translateX(-100%);
+          text-align: center; } }
       .menu__header .header__my-name.show {
         transform: translateY(0); }
+        @media screen and (min-width: 768px) {
+          .menu__header .header__my-name.show {
+            transform: translateX(0); } }
   .menu__list {
     background-color: rgba(255, 255, 255, 0.1);
     display: flex;
@@ -582,6 +596,10 @@ body {
     padding: 0;
     transform: translateY(100%);
     transition: transform 0.3s ease-in-out; }
+    @media screen and (min-width: 768px) {
+      .menu__list {
+        transform: translateY(-100%);
+        height: 100vh; } }
     .menu__list.show {
       transform: translateY(0); }
     .menu__list .list__item {
@@ -590,6 +608,9 @@ body {
       transform: translateX(-100%);
       transition: transform 0.3s ease-in-out;
       transition-delay: 300ms; }
+      @media screen and (min-width: 768px) {
+        .menu__list .list__item {
+          transform: translateX(100%); } }
       .menu__list .list__item.show {
         transform: translateX(0); }
       .menu__list .list__item a {
@@ -685,7 +706,7 @@ body {
       .header .professions {
         align-items: center;
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
         padding: 1.5rem 2rem; } }
     .header .professions__profession {
       font-size: 1.8rem;
