--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -75,17 +75,35 @@
 	visibility: hidden;
 	width: 100%;
 
+	@include mq(768px) {
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+	}
+
 	&__header {
 		align-items: center;
 		display: flex;
 		height: 50vh;
 
+		@include mq(768px) {
+			height: 100vh;
+		}
+
 		.header__my-name {
 			transform: translateY(-300%);
 			transition: transform 0.3s ease-in-out;
 
+			@include mq(768px) {
+				transform: translateX(-100%);
+				text-align: center;
+			}
+
 			&.show {
 				transform: translateY(0);
+
+				@include mq(768px) {
+					transform: translateX(0);
+				}
 			}
 		}
 	}
@@ -101,6 +119,11 @@
 		transform: translateY(100%);
 		transition: transform 0.3s ease-in-out;
 
+		@include mq(768px) {
+			transform: translateY(-100%);
+			height: 100vh;
+		}
+
 		&.show {
 			transform: translateY(0);
 		}
@@ -111,6 +134,10 @@
 			transform: translateX(-100%);
 			transition: transform 0.3s ease-in-out;
 			transition-delay: 300ms;
+
+			@include mq(768px) {
+				transform: translateX(100%);
+			}
 
 			&.show {
 				transform: translateX(0);
